--- a/objective-example/objective-example.cabal
+++ b/objective-example/objective-example.cabal
@@ -13,6 +13,6 @@ executable objective-example
   build-depends:       base >=4.6 && <4.8
                      , gloss >=1.9.2.1
                      , gloss-algorithms >=1.9.2.1
-                     , objective >=0.4
+                     , objective >=1.0 && <1.2
   default-language:    Haskell2010
   ghc-options: -W -Wall
